[gd_scene load_steps=18 format=2]

[ext_resource path="res://Demon.gd" type="Script" id=1]
[ext_resource path="res://Drop.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/ghost_frames/ghost_frame_0.png" type="Texture" id=4]
[ext_resource path="res://art/ghost_frames/ghost_frame_1.png" type="Texture" id=5]
[ext_resource path="res://art/ghost_frames/ghost_frame_2.png" type="Texture" id=6]
[ext_resource path="res://art/ghost_frames/ghost_frame_3.png" type="Texture" id=7]
[ext_resource path="res://art/ghost_frames/ghost_frame_4.png" type="Texture" id=8]
[ext_resource path="res://art/ghost_frames/ghost_frame_5.png" type="Texture" id=9]
[ext_resource path="res://art/ghost_frames/ghost_frame_6.png" type="Texture" id=10]
[ext_resource path="res://art/ghost_frames/ghost_frame_7.png" type="Texture" id=11]
[ext_resource path="res://art/ghost_frames/ghost_frame_8.png" type="Texture" id=12]
[ext_resource path="res://art/ghost_frames/ghost_frame_9.png" type="Texture" id=13]
[ext_resource path="res://audio/priest_hit.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/demon_shot.ogg" type="AudioStream" id=15]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0
height = 64.0

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Demon" type="KinematicBody2D" groups=[
"Enemies",
]]

scale = Vector2( 1.5, 1.5 )
input_pickable = false
collision_layer = 1
collision_mask = 82
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
hp = 50
bullet_speed = 100.0
damage = 5
max_drop = 10
rotated_right = true
gravity = 500
walk_force = 600
walk_min_speed = 10
walk_max_speed = 200
stop_force = 1150
Drop = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "default"

[node name="ShootTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="WalkTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="RayCast2D" type="RayCast2D" parent="." index="4"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 27

[node name="HitSound" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ShotSound" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]


